# shifter

./: .env_example  alembic.ini  config.py  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 1e99ad3d9a27_db_creation.py  62aa153db7ab_db_recreation.py
src/flashcard/: database.py  models.py  schemas.py
